fix css scrollbar error

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@
     font-weight: bold;
     font-size: 10px;
     font-size: 7vw;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 @media screen and (min-width: 1000px) {
